grammar.js
    source_file: ($) => repeat($._statement),

    _statement: ($) =>
      choice($._expression_statement, $._declaration_statement),

    _expression_ending_with_block: ($) =>
      prec(
        1,
        choice(
          $.block,
          $.comptime_block,
          $.defer_block,
          $.suspend_block,
          $.resume_block,
          $.if_expression,
          $.while_expression,
          $.for_expression,
          $.test_expression
        )
      ),

    _expression: ($) =>
      prec.left(
        choice(
          $.build_in_call_expr,
          $.call_expression,
          $.await_expression,
          $.suspend_expression,
          $.resume_expression,
          $.index_expression,
          $.field_expression,
          $._expression_ending_with_block,
          $.struct_expression,
          $.struct_construction,
          $.anonymous_struct_enum,
          $.enum_expression,
          $.union_expression,
          $.error_expression,
          $.switch_expression,
          $.continue_expression,
          $.break_expression,
          $.return_expression,
          $.assignment_expression,
          $.array_expression,
          $.anonymous_array_expr,
          $.compound_assignment_expr,
          $.payload_expression,
          $.unary_expression,
          $.binary_expression,
          $.reference_expression,
          $.dereference_expression,
          $.orelse_postfix_expression,
          $.try_expression,
          $._range_pattern,
          $.unreachable_expression,
          $.usingnamespace_expression,
          $.defer_expression,
          $._type,
          $._literals,
          $.identifier
        )
      ),

    // Statements
    assignment_statement: ($) =>
      seq(
        optional($.visibility_modifier),
        optional(
          alias(choice("threadlocal", "comptime"), $.assignment_modifier)
        ),
        choice("const", "var"),
        field("name", $.identifier),
        optional(seq(":", field("type", $._type))),
        "=",
        field("expression", $._expression),
        ";"
      ),

    function_declaration: ($) =>
      seq(
        optional($.visibility_modifier),
        optional($.function_modifiers),
        "fn",
        field("name", $.identifier),
        field("parameters", $.parameters),
        optional(field("return", $._expression)),
        field("body", $.block)
      ),

    visibility_modifier: (_) => choice("pub"),

    parameters: ($) => seq("(", sepBy(",", $.parameter), ")"),

    build_in_call_expr: ($) =>
      prec(
        PREC.call,
        seq(
          field(
            "function",
            alias(/@[a-zA-Zα-ωΑ-Ωµ_][a-zA-Zα-ωΑ-Ωµ\d_]*/, $.identifier)
          ),
          field("arguments", $.arguments)
        )
      ),

    call_expression: ($) =>
      prec(
        PREC.call,
        seq(
          optional(alias("async", $.call_modifier)),
          field("function", $.identifier),
          field("arguments", $.arguments)
        )
      ),

    await_expression: ($) => prec.left(seq("await", $._expression)),

    suspend_expression: ($) =>
      prec.left(seq("suspend", optional($._expression))),

    resume_expression: ($) => prec.left(seq("resume", optional($._expression))),

    arguments: ($) => seq("(", sepBy(",", $._expression), ")"),

    field_expression: ($) =>
      prec.left(
        PREC.call,
        seq(
          field("value", $._expression),
          ".",
          field(
            "field",
            choice(alias($.identifier, $.field_identifier), $._expression)
          )
        )
      ),

    index_expression: ($) =>
      prec(
        PREC.call,
        seq($._expression, "[", choice($._expression, $.slice_pattern), "]")
      ),

    _pattern: ($) =>
      choice(
        $.slice_pattern,
        $._range_pattern,
        alias($.field_expression, $.field_pattern),
        alias($._literals, $.literal_pattern)
      ),

    slice_pattern: ($) =>
      prec.right(
        PREC.call,
        seq(optional(field("start", $._expression)), choice("..", "..."), optional(field("end", $._expression))),
      ),

    switch_expression: ($) =>
      seq(
        "switch",
        "(",
        field("value", $._expression),
        ")",
        field("body", $.switch_block)
      ),

    switch_block: ($) =>
      seq("{", optional(seq(repeat($.switch_arm), $.switch_last_arm)), "}"),

    switch_arm: ($) =>
      seq(
        field("pattern", $.switch_pattern),
        "=>",
        choice(
          seq(field("value", $._expression), ","),
          field("value", prec(1, $._expression_ending_with_block))
        )
      ),

    switch_last_arm: ($) =>
      seq(
        field(
          "pattern",
          choice(alias("else", $.else_switch), $.switch_pattern)
        ),
        "=>",
        field("value", $._expression),
        optional(",")
      ),

    switch_pattern: ($) => choice($._pattern, sepBy1(",", $._pattern)),

    if_expression: ($) =>
      prec.left(
        seq(
          "if",
          $._condition,
          field("consequence", choice($._expression, $.block)),
          optional($._else_tail)
        )
      ),

    while_expression: ($) =>
      prec.left(
        seq(
          optional($.loop_label),
          optional(alias("inline", $.loop_modifier)),
          "while",
          choice($._condition, $._condition_with_continue),
          field("body", $.block),
          optional($._else_tail)
        )
      ),

    for_expression: ($) =>
      prec.left(
        seq(
          optional($.loop_label),
          optional(alias("inline", $.loop_modifier)),
          "for",
          $._condition,
          field("body", $.block),
          optional($._else_tail)
        )
      ),

    _condition: ($) =>
      prec.left(
        seq("(", field("condition", $._expression), ")", optional($.payload))
      ),

    _condition_with_continue: ($) =>
      seq(
        "(",
        field("condition", $._expression),
        ")",
        ":",
        "(",
        field(
          "continue",
          choice($._expression, seq("{", sepBy1(";", $._expression), "}"))
        ),
        ")"
      ),

    _else_tail: ($) => prec(PREC.if, seq("else", $._else_case)),

    loop_label: ($) =>
      seq(field("name", alias($.identifier, $.label_identifier)), ":"),

    payload: ($) =>
      seq(
        "|",
        optional("*"),
        field("values", sepBy1(",", alias($.identifier, $.payload_identifier))),
        "|"
      ),

    payload_expression: ($) =>
      prec.left(seq($.payload, choice($._expression, $.block))),

    break_expression: ($) =>
      prec.left(
        seq(
          "break",
          optional(field("label", $.loop_label_inverse)),
          optional(field("value", $._expression))
        )
      ),

    continue_expression: ($) =>
      seq("continue", optional(field("label", $.loop_label_inverse))),

    loop_label_inverse: ($) =>
      seq(":", field("name", alias($.identifier, $.label_identifier))),

    return_expression: ($) =>
      choice(prec.left(seq("return", $._expression)), prec(-1, "return")),

    test_expression: ($) =>
      seq("test", field("test_name", $.string_literal), field("body", $.block)),

    usingnamespace_expression: ($) =>
      prec.left(
        seq(
          optional($.visibility_modifier),
          "usingnamespace",
          field("import", $._expression)
        )
      ),

    _type: ($) =>
      prec(
        -1,
        choice(
          $.primitive_type,
          $.optional_type,
          $.pointer_type,
          $.error_type,
          $.array_type,
          alias($._struct_standalone, $.struct_expression),
          alias($.identifier, $.type_identifier)
        )
      ),

    primitive_type: (_) => choice(...primitive_types),

    // Having the err field optional cause a bunch of conflicts
    // so when `!<type>` happens, it will show as unary expression
    error_type: ($) =>
      prec.left(seq(field("err", $._type), "!", field("ok", $._type))),

    optional_type: ($) => prec(PREC.optional, seq("?", $._type)),

    array_type: ($) =>
      prec(
        PREC.array,
        seq(
          repeat(
            seq(
              "[",
              field(
                "size",
                optional(
                  choice(
                    $.integer_literal,
                    $.identifier,
                    alias(seq("*", optional("c")), $.pointer)
                  )
                )
              ),
              "]"
            )
          ),
          optional(repeat($.type_prefix)),
          // Cannot be another array type, since the sintax already cover
          // muldimentional arrays
          choice(
            $.primitive_type,
            $.optional_type,
            $.pointer_type,
            $.error_type,
            alias($.identifier, $.type_identifier)
          )
        )
      ),

    pointer_type: ($) =>
      prec.left(seq("*", optional(repeat($.type_prefix)), $._expression)),

    type_prefix: ($) =>
      prec(
        -1,
        choice(
          "null",
          "const",
          "volatile",
          "allowzero",
          seq("align", "(", $._expression, ")"),
          seq("promise", "-")
        )
      ),

    comptime_block: ($) => seq("comptime", $.block),

    suspend_block: ($) => seq("suspend", $.block),

    resume_block: ($) => seq("resume", $.block),

    block: ($) =>
      prec.left(
        seq(
          optional(field("label", $.loop_label)),
          "{",
          optional(repeat($._statement)),
          optional($._expression),
          "}"
        )
      ),

    reference_expression: ($) =>
      prec(PREC.unary, seq("&", field("value", $._expression))),

    dereference_expression: ($) => seq(field("value", $._expression), ".*"),

    struct_construction: ($) =>
      seq(
        alias($.identifier, $.type_identifier),
        "{",
        field("field", sepBy(",", $.field_init)),
        "}"
      ),

    anonymous_struct_enum: ($) =>
      seq(".{", field("field", sepBy1(",", $.field_init)), "}"),

    field_init: ($) =>
      seq(
        ".",
        field("name", alias($.identifier, $.field_identifier)),
        "=",
        field("value", $._expression)
      ),

    union_expression: ($) =>
      seq(
        optional(alias(choice("packed", "extern"), $.union_modifier)),
        "union",
        optional(
          seq(
            "(",
            field("type", choice($._type, alias("enum", $.inference_type))),
            ")"
          )
        ),
        "{",
        field("field_variant", sepBy(",", $.union_field_variant)),
        optional(repeat($._statement)),
        "}"
      ),

    union_field_variant: ($) =>
      prec(
        2,
        seq(
          field("name", alias($.identifier, $.union_identifier)),
          optional(
            seq(
              ":",
              field("type", choice($._type, alias("var", $.inference_type)))
            )
          )
        )
      ),

    enum_expression: ($) =>
      seq(
        optional(alias(choice("packed", "extern"), $.enum_modifier)),
        "enum",
        optional(seq("(", field("type", $._type), ")")),
        "{",
        field("variant", sepBy(",", $.variant_declaration)),
        optional(repeat($._statement)),
        "}"
      ),

    variant_declaration: ($) =>
      prec(
        2,
        seq(
          field("name", alias($.identifier, $.enum_identifier)),
          optional(seq("=", field("default", $._expression)))
        )
      ),

    struct_expression: ($) =>
      seq(
        optional(alias(choice("packed", "extern"), $.struct_modifier)),
        $._struct_standalone
      ),

    _struct_standalone: ($) =>
      seq(
        "struct",
        "{",
        repeat($._field_entry),
        optional($._field_entry_last),
        "}"
      ),

    field_declaration: ($) =>
      seq(
        optional($.visibility_modifier),
        field("name", alias($.identifier, $.field_identifier)),
        ":",
        field("type", choice($._type, alias("var", $.inference_type))),
        optional(seq("=", field("default", $._expression)))
      ),

    error_expression: ($) =>
      seq("error", choice($._error_one_shorthand, $._default_error)),

    _error_one_shorthand: ($) =>
      seq(".", field("error_variant", alias($.identifier, $.error_identifier))),

    _default_error: ($) =>
      seq(
        "{",
        field(
          "error_variant",
          sepBy(",", alias($.identifier, $.error_identifier))
        ),
        "}"
      ),

    array_expression: ($) =>
      prec.right(
        -1,
        seq(
          repeat1(
            seq("[", field("size", choice($.integer_literal, $.identifier)), "]")
          ),
          field("type", $._expression),
          field("values", $.array_values)
        )
      ),

    anonymous_array_expr: ($) =>
      seq(
        ".{",
        field("values", alias(sepBy(",", $._expression), $.array_values)),
        "}"
      ),

    array_values: ($) => seq("{", sepBy(",", $._expression), "}"),

    assignment_expression: ($) =>
      prec.left(
        PREC.assign,
        seq(
          optional(choice("defer", "errdefer")),
          field("left", $._expression),
          "=",
          field("right", $._expression)
        )
      ),

    compound_assignment_expr: ($) =>
      prec.left(
        PREC.assign,
        seq(
          field("left", $._expression),
          field("operator", $.assignment_operator),
          field("right", $._expression)
        )
      ),

    unary_expression: ($) =>
      prec.left(
        PREC.unary,
        seq(
          field("operator", $.unary_operator),
          field("expression", $._expression)
        )
      ),

    binary_expression: ($) => {
      const table = [
        [PREC.and, "and"],
        [PREC.or, "or"],
        [PREC.bitand, "&"],
        [PREC.bitor, "|"],
        [PREC.bitxor, "^"],
        [PREC.comparative, choice("==", "!=", "<", "<=", ">", ">=")],
        [PREC.shift, choice("<<", ">>")],
        [PREC.additive, choice("+", "-", "++", "+%", "-%")],
        [PREC.multiplicative, choice("*", "/", "%", "**", "*%", "||")],
        [PREC.special, choice("orelse", "catch")],
      ];

      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(
            precedence,
            seq(
              field("left", $._expression),
              field("operator", alias(operator, $.binary_operator)),
              field("right", $._expression)
            )
          )
        )
      );
    },

    enum_literal: ($) =>
      prec.right(
        seq(".", field("variant", alias($.identifier, $.enum_identifier)))
      ),

    integer_literal: (_) =>
      token(seq(choice(/[0-9]+/, /0x[0-9a-fA-F]+/, /0b[01]+/, /0o[0-7]+/))),

    float_literal: (_) => {
      const decimal = /[0-9][0-9_]*/;
      const hexadecimal = /[0-9a-fA-F][0-9a-fA-F_]*/;
      return prec.left(token(
        seq(
          choice(
            seq(/0[xX]/, hexadecimal, ".", hexadecimal),
            seq(decimal, ".", decimal)
          ),
          optional(/[eEpP][+-]?\d+/)
        )
      ));
    },

    string_literal: ($) =>
      seq(
        '"',
        repeat(choice($.escape_sequence, /[^"\\]+/)),
        token.immediate('"')
      ),

    boolean_literal: (_) => choice("true", "false"),

    undefined_literal: (_) => "undefined",

    assignment_operator: (_) =>
      choice(
        "+=",
        "-=",
        "*=",
        "/=",
        "+%=",
        "-%=",
        "*%=",
        "%=",
        "&=",
        "|=",
        "^=",
        "<<=",
        ">>="
      ),
    unary_operator: (_) => choice("~", "!", "-", "-%"),

    identifier: ($) => choice($._str_identifier, $._identifier_text),

    _str_identifier: ($) =>
      seq(
        '@"',
        alias(repeat(choice($.escape_sequence, /[^"\\]+/)), $.string_literal),
        token.immediate('"')
      ),
